--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@ethersproject/hdnode": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@panva/hkdf": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.0.2",
     "antd": "^5.24.7",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "framer-motion": "^12.6.5",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.2.0",
     "viem": "^2.26.3",
     "wagmi": "^2.14.16",
     "web3": "^4.16.0"
