--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@panva/hkdf": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.0.2",
