--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.6.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.488.0",
     "next": "^14.1.0",
     "pino-pretty": "^13.0.0",
     "qrcode.react": "^4.2.0",
