--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
+    "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^14.1.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20.11.19",
     "@types/node-localstorage": "^1.3.3",
@@ -77,6 +79,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.1.0",
     "eslint-formatter-table": "^7.32.1",
+    "jest": "^29.7.0",
     "jose": "^5.2.2",
     "node-localstorage": "^3.0.5",
     "postcss": "^8.4.31",
