--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,25 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "env": {
-    "NEXT_PUBLIC_MAINNET_RPC_URL": "https://eth-mainnet.g.alchemy.com/v2/demo",
-    "NEXT_PUBLIC_WALLET_NAME": "Freo Wallet",
-    "NEXT_PUBLIC_WALLET_DESCRIPTION": "A secure and user-friendly Ethereum wallet",
-    "NEXT_PUBLIC_ENABLE_TRANSACTION_MONITORING": "true",
-    "NEXT_PUBLIC_ENABLE_TOKEN_MANAGEMENT": "true",
-    "NEXT_PUBLIC_ENCRYPTION_KEY": "freo-wallet-production-key-2024",
-    "NEXT_PUBLIC_SESSION_TIMEOUT": "3600",
-    "NEXT_PUBLIC_THEME": "light",
-    "NEXT_PUBLIC_DEFAULT_CURRENCY": "USD"
-  }
+    "NEXT_PUBLIC_INFURA_URL": "@next_public_infura_url"
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "headers": {
+        "X-Frame-Options": "DENY",
+        "X-Content-Type-Options": "nosniff",
+        "Referrer-Policy": "strict-origin-when-cross-origin",
+        "Permissions-Policy": "camera=(), microphone=(), geolocation=()",
+        "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.infura.io wss://*.infura.io"
+      },
+      "continue": true
+    }
+  ]
 } 
